tests/NormalTests/paczka1/fuzzy1/76248409.err
Error in line 2: wZSowoj3aaX S847 19,4
Error in line 9: wZSowoj3aaX S128 53,6
Error in line 18: hVFyHeBCsjh S128 5,53
Error in line 21: hVFyHeBCsjh A353 89,83
Error in line 13: 6yWRgkyyVc A353 95,1
Error in line 22: 6yWRgkyyVc S128 27,0
Error in line 24: 6yWRgkyyVc A353 1)1,8
Error in line 23: 6yWRgkyyVc A353 26,5
Error in line 38: 1xdsqpXtBZs S195 35,8
